--- a/client/app/create/create.html
+++ b/client/app/create/create.html
@@ -1,21 +1,21 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 <div class="container page-container">
   <div class="row">
-  <div class="form-meta">
-    <div class="col-lg-8 col-sm-8">
-      <div class="form-title">
-        <input type="text" ng-model="form.name" class="form-control inlineInput flag">
+    <div class="form-meta">
+      <div class="col-lg-8 col-sm-8">
+        <div class="form-title">
+          <input type="text" ng-model="form.name" class="form-control inlineInput flag">
+        </div>
       </div>
-    </div>
-    <div class="col-lg-4 col-sm-4">
-      <div class="form-actions pull-right">
-        <a class="btn btn-info btn-sm" href="/forms/{{form._id}}" tooltip="See how the form looks!" tooltip-append-to-body="true"  tooltip-placement="top">Preview</a>
-        &nbsp;&nbsp;&nbsp;
-        <button class="btn btn-success btn-sm" tooltip="Publish your form" tooltip-append-to-body="true" >Publish</button>
-        &nbsp;&nbsp;&nbsp;
-        <button class="btn btn-danger btn-sm" tooltip-append-to-body="true"  tooltip="Remove this form! Can't be reverted!"><em class="icon icon-remove"></em></button>
+      <div class="col-lg-4 col-sm-4">
+        <div class="form-actions pull-right">
+          <a class="btn btn-info btn-sm" href="/forms/{{form._id}}" tooltip="See how the form looks!" tooltip-append-to-body="true"  tooltip-placement="top">Preview</a>
+          &nbsp;&nbsp;&nbsp;
+          <button class="btn btn-success btn-sm" tooltip="Publish your form" tooltip-append-to-body="true" >Publish</button>
+          &nbsp;&nbsp;&nbsp;
+          <button class="btn btn-danger btn-sm" tooltip-append-to-body="true"  tooltip="Remove this form! Can't be reverted!"><em class="icon icon-remove"></em></button>
+        </div>
       </div>
-    </div>
     </div>
   </div>
   <div class="row">
@@ -34,43 +34,29 @@
     <div class="col-lg-9 col-sm-9 g-c-content">
       <tabset class="g-c-section-content">
       <tab ng-repeat="section in form.sections" active="section.active" disabled="section.disabled">
-        <div class="row g-c-seciton-meta" sticky-media="(min-width:640px)">
-          <div class="col-lg-8 col-sm-8">
-            <input type="text" ng-model="section.title" class="form-control inlineInput">
-          </div>
-          <div class="col-lg-4 col-sm-4">
-                <span class="last-save-text text-muted">
-                  <span ng-if='enableSaveButton'  tooltip-append-to-body="true"  tooltip="Last Saved on: {{getFormatedDate(section.updated)}}" tooltip-position="left"> Upto data!</span>
-                  <span ng-if='!enableSaveButton'  tooltip-append-to-body="true"  tooltip="Last Saved on: {{getFormatedDate(section.updated)}}" tooltip-position="left"> Section changed!</span>
-                </span>
-
-
-<!--             <span class="last-save-text text-muted text-small">
-              <strong>Last Saved on </strong> {{getFormatedDate(section.updated)}}
-            </span> -->
-            <div class="pull-right">
-              <div class="formSubmit">
-                <div class="pull-right">
-                  <button class="btn btn-success" ng-click="submitSection(section, section._id)" ladda="sectionSaving" data-style="expand-left"
-                  ng-disabled="enableSaveButton"
-                  >Save</button>
-                  &nbsp;&nbsp;&nbsp;&nbsp;
-                  <a tooltip-append-to-body="true"  tooltip="Remove this section!" href="" ng-click="removeSection(section)" class="btn btn-danger btn-sm"><em class="icon icon-remove"></em></a>
-                </div>
-                <div class="clearfix"></div>
-
+      <div class="row g-c-seciton-meta" sticky-media="(min-width:640px)">
+        <div class="col-lg-8 col-sm-8">
+          <input type="text" ng-model="section.title" class="form-control inlineInput">
+        </div>
+        <div class="col-lg-4 col-sm-4">
+          <span class="last-save-text text-muted">
+          <span ng-if='enableSaveButton'  tooltip-append-to-body="true"  tooltip="Last Saved on: {{getFormatedDate(section.updated)}}" tooltip-position="left"> Upto data!</span>
+          <span ng-if='!enableSaveButton'  tooltip-append-to-body="true"  tooltip="Last Saved on: {{getFormatedDate(section.updated)}}" tooltip-position="left"> Section changed!</span>
+          </span>
+          <div class="pull-right">
+            <div class="formSubmit">
+              <div class="pull-right">
+                <button class="btn btn-success" ng-click="submitSection(section, section._id)" ladda="sectionSaving" data-style="expand-left"
+                ng-disabled="enableSaveButton"
+                >Save</button>
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <a tooltip-append-to-body="true"  tooltip="Remove this section!" href="" ng-click="removeSection(section)" class="btn btn-danger btn-sm"><em class="icon icon-remove"></em></a>
               </div>
+              <div class="clearfix"></div>
             </div>
           </div>
         </div>
-<!--
-        <div class="row">
-          <div class="col-lg-1 col-sm-11">
-
-          </div>
-        </div>
- -->
-
+      </div>
       <div class="ui-sortable sortableList" ui-sortable="sortableOptions" ng-model="section.fields">
         <div class="formFieldWrap" ng-repeat="field in section.fields">
           <div class="form-horizontal">
@@ -78,7 +64,7 @@
               <div class="formSort"><div class="draghandle"></div></div>
               <div class="formFieldActions">
                 <button class="btn btn-small inlineText" type="button" ng-if="section.fields.length > 1" ng-click="removeField(field, section)">
-                  <em class="icon icon-remove"></em>
+                <em class="icon icon-remove"></em>
                 </button>
               </div>
               <div class="formField">
@@ -133,7 +119,7 @@
               </div>
             </div>
             <div class="formFieldPrev js_form_template">
-              <prev-element field="field"></prev-element>
+<prev-element field="field"></prev-element>
             </div>
           </div>
         </div>
@@ -144,11 +130,29 @@
             </a>
           </div>
         </div>
+        <div class="row" sticky-media="(min-width:640px)">
+          <div class="col-lg-8 col-sm-8">
+          </div>
+          <div class="col-lg-4 col-sm-4">
+            <span class="last-save-text text-muted">
+              <span ng-if='enableSaveButton'  tooltip-append-to-body="true"  tooltip="Last Saved on: {{getFormatedDate(section.updated)}}" tooltip-position="left"> Upto data!</span>
+              <span ng-if='!enableSaveButton'  tooltip-append-to-body="true"  tooltip="Last Saved on: {{getFormatedDate(section.updated)}}" tooltip-position="left"> Section changed!</span>
+            </span>
+            <div class="pull-right">
+              <div class="formSubmit">
+                <div class="pull-right">
+                  <button class="btn btn-success" ng-click="submitSection(section, section._id)" ladda="sectionSaving" data-style="expand-left"
+                  ng-disabled="enableSaveButton"
+                  >Save</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 </tab>
 </tabset>
     </div>
   </div>
 </div>
-
 <div ng-include="'components/footer/footer.html'"></div>
