--- a/client/app/forms/forms.html
+++ b/client/app/forms/forms.html
@@ -52,9 +52,12 @@
           <td> {{getFormatedDate(form.created)}}</td>
           <td>
 
-          <a href="" class="btn btn-info btn-xs" ng-click="previewForm(form)"><em class="icon icon-eye"></em></a>
+          <a href="forms/{{form._id}}" class="btn btn-info btn-xs" ng-click="previewForm(form)
+          " tooltip="Preview this form" tooltip-append-to-body="true"><em class="icon icon-eye"></em></a>
           &nbsp;&nbsp;&nbsp;
-          <a href="" class="btn btn-danger btn-xs" ng-click="removeForm(form)"><em class="icon icon-remove"></em></a>
+          <a href="" class="btn btn-danger btn-xs" ng-click="removeForm(form)"
+            tooltip="Remove this form! (think twice)" tooltip-append-to-body="true"
+          ><em class="icon icon-remove"></em></a>
 
           </td>
         </tr>
