--- a/client/app/formshow/formshow.html
+++ b/client/app/formshow/formshow.html
@@ -1,11 +1,54 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
-<div class="container page-container">
-  <div ng-repeat="section in form.sections">
-    <div class="" ng-repeat="field in section.fields">
-      <prev-element field="field"></prev-element>
-    </div>
+<div class="container page-container form-show">
 
+
+  <div class="row">
+    <div class="form-meta">
+      <div class="col-lg-8 col-sm-8">
+        <div class="form-title">
+          <h1>{{form.name}}</h1>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <div class="row">
+    <div class="form-sections">
+      <div class="col-lg-12 col-sm-12">
+        <div class="form-show-container">
+          <ul class="list-unstyled wiz">
+            <li ng-repeat="section in form.sections" ng-click="toggleClass(section)" ng-class="{active: section.active}">
+              <span class="wiz-title">{{section.title}}</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+  <div class="col-lg-12 col-sm-12">
+  <div class="form-show-container">
+  <div ng-repeat="section in form.sections" ng-if='section.active'>
+    <div class="" ng-repeat="field in section.fields">
+      <div>
+        <prev-element field="field"></prev-element>
+      </div>
+    </div>
+    <div class="row">
+      <div class="pull-right">
+        <a href=""> Cancel </a>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <button class="btn btn-success"> Save </button>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <button class="btn btn-primary"> Next step &rarr; </button>
+      </div>
+    </div>
+  </div>
+  </div>
+</div>
+</div>
+
 </div>
 
 <div ng-include="'components/footer/footer.html'"></div>
