--- a/client/index.html
+++ b/client/index.html
@@ -79,6 +79,7 @@
           <script src="app/create/create.js"></script>
           <script src="app/fieldElement/fieldElement.js"></script>
           <script src="app/fields/fields.js"></script>
+          <script src="app/formData/formData.js"></script>
           <script src="app/forms/forms.js"></script>
           <script src="app/formshow/formshow.js"></script>
           <script src="app/main/main.js"></script>
