Adding bonus label

--- a/client/app/prevElement/prevElement.html
+++ b/client/app/prevElement/prevElement.html
@@ -1,7 +1,10 @@
 <div class="js_form_template formShow" ng-switch="field.type">
   <div data-option="text" ng-switch-when="text">
     <div class="form-group">
-      <label for="{{field._id}}" class="prev-field-label"><span ng-bind-html="field.label"></span></label>
+      <label for="{{field._id}}" class="prev-field-label">
+        <strong class="bonus-label label label-info" ng-if="field.is_bonus">Bonus</strong> <br ng-if="field.is_bonus">
+        <span ng-bind-html="field.label"></span>
+      </label>
       <abbr title="Required" ng-if="field.required"> *</abbr>
       <strong class="text-muted">&mdash;  [{{field.choice[0].points || 0}} {{field.choice[0].points == 1 ? 'point' : 'points'}}]</strong>
       <input type="text" class="form-control" ng-model="field.response" id="{{field._id}}">
@@ -11,7 +14,10 @@
 
   <div data-option="textarea" ng-switch-when="textarea">
     <div class="form-group">
-      <label for="{{field._id}}" class="prev-field-label"><span ng-bind-html="field.label"></span></label>
+      <label for="{{field._id}}" class="prev-field-label">
+        <strong class="bonus-label label label-info" ng-if="field.is_bonus">Bonus</strong> <br ng-if="field.is_bonus">
+        <span ng-bind-html="field.label"></span>
+      </label>
       <abbr title="Required" ng-if="field.required"> *</abbr>
       <strong class="text-muted">&mdash;  [{{field.choice[0].points || 0}} {{field.choice[0].points == 1 ? 'point' : 'points'}}]</strong>
       <textarea class="form-control" ng-model="field.response" id="{{field._id}}"></textarea>
@@ -22,14 +28,12 @@
   <div data-option="select" ng-switch-when="select">
     <div class="form-group">
       <label for="{{field._id}}" class="prev-field-label">
+        <strong class="bonus-label label label-info" ng-if="field.is_bonus">Bonus</strong> <br ng-if="field.is_bonus">
         <span ng-bind-html="field.label"></span>
         <abbr title="Required" ng-if="field.required"> *</abbr>
       </label>
 
-      <br>
       <strong class="text-muted possible-points">[Points possible - {{findMax(field.choices)}}]</strong>
-      <br>
-
 
         <select ng-model="field.response" id="field._id" class="form-control">
           <option value="">– Select one –</option>
@@ -64,16 +68,15 @@
  -->
 
 
-
-
   <div data-option="checkbox" ng-switch-when="checkbox">
     <div class="form-group">
-      <label for="{{field._id}}" class="prev-field-label"><span ng-bind-html="field.label"></span>
-      </label><abbr title="Required" ng-if="field.required"> *</abbr>
+      <label for="{{field._id}}" class="prev-field-label">
+        <strong class="bonus-label label label-info" ng-if="field.is_bonus">Bonus</strong> <br ng-if="field.is_bonus">
+        <span ng-bind-html="field.label"></span>
+        <abbr title="Required" ng-if="field.required"> *</abbr>
+      </label>
 
-      <br>
       <strong class="text-muted possible-points">[Points possible - {{findMax(field.choices)}}]</strong>
-      <br>
 
       <div class="inputLabel inline" ng-repeat="choice in field.choices">
         <input type="checkBox" ng-model="choice.selected" value="{{choice._id}}" id="{{choice._id}}" />
@@ -93,13 +96,13 @@
 
  <div data-option="radiobutton" ng-switch-when="radiobutton">
     <div class="form-group">
-      <label for="{{field._id}}" class="prev-field-label"><span ng-bind-html="field.label"></span>
-      <abbr title="Required" ng-if="field.required"> *</abbr>
+      <label for="{{field._id}}" class="prev-field-label">
+        <strong class="bonus-label label label-info" ng-if="field.is_bonus">Bonus</strong> <br ng-if="field.is_bonus">
+        <span ng-bind-html="field.label"></span>
+        <abbr title="Required" ng-if="field.required"> *</abbr>
       </label>
 
-      <br>
       <strong class="text-muted possible-points">[Points possible - {{findMax(field.choices)}}]</strong>
-      <br>
 
       <div class="inputLabel inline" ng-repeat="choice in field.choices">
         <input type="radio" name="{{field._id}}" ng-model="choice.selected" value="{{choice._id}}" id="{{choice._id}}" />
