--- a/client/app/fieldElement/fieldElement.html
+++ b/client/app/fieldElement/fieldElement.html
@@ -24,7 +24,7 @@
           <div class="multipleOptionsActions">
             <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
             <span ng-if="field.choices.length > 1">
-            <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
+            <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
             </span>
           </div>
         </div>
@@ -35,13 +35,13 @@
       </div>
       <div class="col-lg-10">
         <div class="multipleOptions" ng-repeat="choice in field.choices">
-          <input name="optionsRadio" type="radio" id="option1" class="fakeRadioCheckbox" >
+          <input name="optionsRadio" type="radio" id="option1" class="fakeRadioCheckbox"  tabindex="-1">
           <input type="text" values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
           <div class="multipleOptionsActions">
             <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
             <span ng-if="field.choices.length > 1">
-            <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
+            <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
             </span>
           </div>
         </div>
@@ -52,13 +52,13 @@
       </div>
       <div class="col-lg-10">
         <div class="multipleOptions" ng-repeat="choice in field.choices">
-          <input name="optionsCheckboxes" type="checkBox" id="option1" class="fakeRadioCheckbox" >
+          <input name="optionsCheckboxes" type="checkBox" id="option1" class="fakeRadioCheckbox" tabindex="-1" >
           <input type="text" values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
           <div class="multipleOptionsActions">
             <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
             <span ng-if="field.choices.length > 1">
-            <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
+            <a href="" class="js_delete_element btn btn-xs btn-danger" href='' tooltip="Remove this option" tabindex='-1' ng-click="removeChoice(field, field.choices.indexOf(choice))"> <em class="icon icon-remove muted"></em> </a>
             </span>
           </div>
         </div>
