--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,6 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
-      <link rel="stylesheet" href="bower_components/ladda/dist/ladda.min.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -63,6 +62,8 @@
       <script src="bower_components/spin.js/spin.js"></script>
       <script src="bower_components/ladda/dist/ladda.min.js"></script>
       <script src="bower_components/angular-ladda/dist/angular-ladda.min.js"></script>
+      <script src="bower_components/sweetalert/lib/sweet-alert.js"></script>
+      <script src="bower_components/angular-sweetalert/SweetAlert.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
