--- a/client/app/create/create.html
+++ b/client/app/create/create.html
@@ -6,7 +6,6 @@
         <div class="form-title">
           <input type="text" ng-model="form.name" class="form-control inlineInput flag">
         </div>
-
         <div collapse="isCollapsed">
           <div class="from-settings">
             <div class="form-group">
@@ -15,22 +14,14 @@
             </div>
             <hr>
             <div class="from-group pull-right">
-
               <button class="btn btn-danger btn-sm" tooltip-append-to-body="true"  tooltip="Remove this form! Can't be reverted!"><em class="icon icon-remove"></em></button>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
               <button class="btn btn-success" tooltip="Publish your form" tooltip-append-to-body="true" >Publish</button>
-
-
-
             </div>
-
           </div>
         </div>
-
       </div>
       <div class="col-lg-4 col-sm-4">
-
         <div class="form-actions pull-right">
           <button class="btn btn-success btn-sm" ng-click="submitForm(form)" ladda="formSaving" data-style="expand-left" tooltip="Save this form!" tooltip-append-to-body="true"
           ng-disabled="enableSaveButton"
@@ -38,14 +29,9 @@
           &nbsp;&nbsp;&nbsp;
           <a class="btn btn-default btn-sm" href="/forms/{{form._id}}" tooltip="See how the form looks!" tooltip-append-to-body="true"  tooltip-placement="top">Preview</a>
           &nbsp;&nbsp;&nbsp;
-
-
-
           <button class="btn btn-default" ng-click="isCollapsed = !isCollapsed"><em class="icon icon-cog"></em></button>
         </div>
       </div>
-
-
     </div>
   </div>
   <div class="row">
@@ -67,6 +53,7 @@
       <div class="row g-c-seciton-meta" sticky-media="(min-width:640px)">
         <div class="col-lg-8 col-sm-8">
           <input type="text" ng-model="section.title" class="form-control inlineInput">
+          <strong class="section-points">({{section.possible_points}} possible points and {{section.bonus_points}} bonus)</strong>
         </div>
         <div class="col-lg-4 col-sm-4">
           <span class="last-save-text text-muted">
