--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
+      <link rel="stylesheet" href="bower_components/ladda/dist/ladda.min.css" />
+      <link rel="stylesheet" href="bower_components/sweetalert/lib/sweet-alert.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -59,7 +61,7 @@
       <script src="bower_components/jquery-ui/jquery-ui.js"></script>
       <script src="bower_components/angular-ui-sortable/sortable.js"></script>
       <script src="bower_components/angular-animate/angular-animate.js"></script>
-      <script src="bower_components/spin.js/spin.js"></script>
+      <script src="bower_components/spinjs/spin.js"></script>
       <script src="bower_components/ladda/dist/ladda.min.js"></script>
       <script src="bower_components/angular-ladda/dist/angular-ladda.min.js"></script>
       <script src="bower_components/sweetalert/lib/sweet-alert.js"></script>
