--- a/client/app/prevElement/prevElement.html
+++ b/client/app/prevElement/prevElement.html
@@ -96,7 +96,7 @@
 
  <div data-option="radiobutton" ng-switch-when="radiobutton">
     <div class="form-group">
-      <label for="{{field._id}}" class="prev-field-label">
+      <label class="prev-field-label">
         <strong class="bonus-label label label-info" ng-if="field.is_bonus">Bonus</strong> <!-- <br ng-if="field.is_bonus"> -->
         <span ng-bind-html="field.label"></span>
         <abbr title="Required" ng-if="field.required"> *</abbr>
