--- a/client/app/formshow/formshow.html
+++ b/client/app/formshow/formshow.html
@@ -30,6 +30,7 @@
   <div class="col-lg-12 col-sm-12">
   <div class="form-show-container">
   <div ng-repeat="section in form.sections" ng-if='section.active'>
+  <form ng-submit="saveFormResuts($event)">
     <strong class="section-points">({{section.possible_points}} Possible Points, {{section.bonus_points}} Bonus)</strong>
     <div class="" ng-repeat="field in section.fields">
       <div>
@@ -40,11 +41,12 @@
       <div class="pull-right">
         <a href=""> Cancel </a>
         &nbsp;&nbsp;&nbsp;&nbsp;
-        <button class="btn btn-success"> Save </button>
+        <button class="btn btn-success" type="submit"> Save </button>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <button class="btn btn-primary"> Next step &rarr; </button>
       </div>
     </div>
+  </form>
   </div>
   </div>
 </div>
