--- a/client/index.html
+++ b/client/index.html
@@ -79,6 +79,7 @@
           <script src="app/account/settings/settings.js"></script>
           <script src="app/account/signup/signup.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/conditionSettings/conditionSettings.js"></script>
           <script src="app/create/create.js"></script>
           <script src="app/fieldElement/fieldElement.js"></script>
           <script src="app/fields/fields.js"></script>
