--- a/client/app/create/create.html
+++ b/client/app/create/create.html
@@ -108,7 +108,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <field-element field="field"></field-element>
+                  <field-element field="field" section='section'></field-element>
                 </div>
                 <div class="form-group">
                   <div class="col-lg-1 col-sm-1"></div>
