--- a/client/index.html
+++ b/client/index.html
@@ -90,6 +90,7 @@
           <script src="app/options/options.js"></script>
           <script src="app/prevElement/prevElement.js"></script>
           <script src="app/sectionData/sectionData.js"></script>
+          <script src="app/typeBadge/typeBadge.js"></script>
           <script src="components/auth/auth.js"></script>
           <script src="components/auth/user.js"></script>
           <script src="components/modal/modal.js"></script>
