--- a/client/app/prevElement/prevElement.html
+++ b/client/app/prevElement/prevElement.html
@@ -1,4 +1,5 @@
-<div class="js_form_template formShow" ng-switch="field.type" ng-if="!formShow || !field.has_condition">
+<div class="js_form_template formShow" ng-switch="field.type" ng-if="!field.has_condition">
+{{field}}
   <div data-option="text" ng-switch-when="text">
     <div class="form-group">
       <type-badge></type-badge>
