--- a/client/app/fieldElement/fieldElement.html
+++ b/client/app/fieldElement/fieldElement.html
@@ -6,6 +6,10 @@
       </div>
       <div class="col-lg-10">
         <input type="text" class="form-control dashed" />
+        <br>
+        <div>
+          <condition-settings></condition-settings>
+        </div>
       </div>
     </div>
     <!-- Text area  -->
@@ -13,6 +17,7 @@
       <div class="col-lg-1"> </div>
       <div class="col-lg-10">
         <textarea name="" id="" rows="2" class="dashed form-control vertical-resize span12"></textarea>
+        <condition-settings></condition-settings>
       </div>
     </div>
     <!-- Select -->
@@ -31,6 +36,7 @@
             </span>
           </div>
         </div>
+        <condition-settings></condition-settings>
       </div>
     </div>
     <!-- Radio button -->
@@ -68,6 +74,7 @@
             </span>
           </div>
         </div>
+        <condition-settings></condition-settings>
       </div>
     </div>
   </div>
