--- a/client/app/prevElement/prevElement.html
+++ b/client/app/prevElement/prevElement.html
@@ -1,5 +1,4 @@
-<div class="js_form_template formShow" ng-switch="field.type" ng-if="!field.has_condition">
-{{field}}
+<div class="js_form_template formShow" ng-switch="field.type" ng-if="!field.has_condition || !page">
   <div data-option="text" ng-switch-when="text">
     <div class="form-group">
       <type-badge></type-badge>
@@ -25,7 +24,7 @@
       <type-badge></type-badge>
       <abbr title="Required" ng-if="field.required"> *</abbr>
       <strong class="text-muted possible-points">[Points possible - {{findMax(field.choices)}}]</strong>
-        <select id="field._id" class="form-control" ng-model="field.response">
+        <select id="field._id" class="form-control" ng-model="field.response" ng-change="watchResponses(field, section)">
           <option value="">– Select one –</option>
           <option ng-repeat="choice in field.choices" value="{{choice._id}}" ng-selected="choice._id == field.response">
             {{choice.label}} &mdash;  [{{choice.points}} {{choice.points == 1 ? 'point' : 'points'}}]
@@ -66,7 +65,7 @@
       <strong class="text-muted possible-points">[Points possible - {{findMax(field.choices)}}]</strong>
 
       <div class="inputLabel inline" ng-repeat="choice in field.choices">
-        <input type="checkBox" ng-model="choice.selected" value="{{choice._id}}" id="{{choice._id}}" />
+        <input type="checkBox" ng-model="choice.selected" value="{{choice._id}}" id="{{choice._id}}" ng-change="watchResponses(field, section)"/>
         <label ng-bind-html="choice.label" for="{{choice._id}}"></label> <strong class="text-muted">&mdash;  [{{choice.points}} {{choice.points == 1 ? 'point' : 'points'}}]</strong>
       </div>
       <small class="help-block" ng-bind-html="field.help_text"></small>
@@ -87,7 +86,7 @@
       <abbr title="Required" ng-if="field.required"> *</abbr>
       <strong class="text-muted possible-points">[Points possible - {{findMax(field.choices)}}]</strong>
       <div class="inputLabel inline" ng-repeat="choice in field.choices">
-        <input type="radio" name="{{field._id}}" ng-model="field.response" value="{{choice._id}}" id="{{choice._id}}" />
+        <input type="radio" name="{{field._id}}" ng-model="field.response" value="{{choice._id}}" id="{{choice._id}}" ng-change="watchResponses(field, section)"/>
         <label ng-bind-html="choice.label" for="{{choice._id}}"></label> <strong class="text-muted">&mdash;  [{{choice.points}} {{choice.points == 1 ? 'point' : 'points'}}]</strong>
       </div>
       <small class="help-block" ng-bind-html="field.help_text"></small>
