--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
-    <title></title>
+    <title>Environmental Stewardship and Sustainability .::UW::.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -74,6 +74,7 @@
         <script src="app/app.js"></script>
 
           <!-- injector:js -->
+          <script src="app/Utils/Utils.js"></script>
           <script src="app/account/account.js"></script>
           <script src="app/account/login/login.js"></script>
           <script src="app/account/settings/settings.js"></script>
